Start testing Java 13

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ matrix:
     - jdk: openjdk10
     - jdk: openjdk11
     - jdk: openjdk12
+    - jdk: openjdk13
     - jdk: openjdk-ea
   allow_failures:
     - jdk: openjdk-ea
